extends Node2D
var c = 0

@onready var label = $Button_manager/Label
@onready var label_2 = $Button_manager/Label2

func _physics_process(delta):
	if Input.is_action_just_pressed("next"):
		label.visible = false
		label_2.visible = true
		await get_tree().create_timer(5).timeout
		label_2.visible = false
		$fade_transition.show()
		$fade_transition/fade_timer.start()
		$fade_transition/AnimationPlayer.play("fade_in")


func _on_fade_timer_timeout():
	get_tree().change_scene_to_file("res://Game.tscn")
